== 0.23.1

== 0.23.0

* Enhancements
  * Daily digest emails are now available for users who prefer a digest of the previous day included stickies added, completed, and comments made
  * Stickies can now be reassigned to another user in bulk from the project page
  * Users can now be added by email to projects without requiring the user to be signed up
  * Calendar Changes:
    * Calendar filters have been simplified and given a consistent look
    * Sticky popups are now cleaner and no longer display the words, 'description', 'project', or 'tags' as these can be deduced by context
    * Dragging grouped stickies on the calendar now prompts whether to move the invidual sticky, all incomplete stickies in the group, or all the stickies in the group

== 0.22.6

* Enhancements
  * Mass-assignment attr_accessible and params slicing implemented to leverage Rails 3.2.6 configuration defaults
  * The About page now references the Task Tracker forum and contact information
  * Sticky Changes:
    * Creating a group of stickies from the project page now refreshes and shows the newly created stickies
    * Cleaned up lists of stickies by changing how they expand when clicking on them
  * Template Changes:
    * Frames and Templates now require unique names per project
    * Templates can now be copied
      * Note: Tags and owners aren't copied to new templates
    * Compact editing of templates added
      * Template items can be reordered by dragging stickies
    * Generating a new group from a template now requires the project to be specified to limit the number of templates that are displayed
  * Email Changes:
    * Default application name is now added to the from: field for emails
    * Email subjects no longer include the application name
  * New Registration Changes:
    * Users without projects will now be prompted when they view the calendar to create a project
    * Default new user settings updated to also show completed stickies

* Refactoring