@@ -1,5 +1,8 @@
 == 0.23.1
 
+* Testing
+  * Use ActionDispatch for Integration tests instead of ActionController
+
 == 0.23.0
 
 * Enhancements
